force-app/main/default/objects/Opportunity/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>商流その他</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>