force-app/main/default/objects/Opportunity/fields/Other_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Other_Remarks__c</fullName>
    <label>商流その他 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>