force-app/main/default/objects/Opportunity/fields/OverallCondition__c.field-meta.xml
<CustomField>
    <fullName>OverallCondition__c</fullName>
    <inlineHelpText>文字数上限32000字</inlineHelpText>
    <label>課題／今後のアクション</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>