force-app/main/default/objects/Opportunity/fields/OwnerOppDepartment__c.field-meta.xml
<CustomField>
    <fullName>OwnerOppDepartment__c</fullName>
    <formula>Owner.Department__c</formula>
    <label>所有者 所属部</label>
    <type>Text</type>
</CustomField>