force-app/main/default/objects/Opportunity/fields/OwnerOppDivision01__c.field-meta.xml
<CustomField>
    <fullName>OwnerOppDivision01__c</fullName>
    <formula>Owner.Division01__c</formula>
    <label>所有者 所属課</label>
    <type>Text</type>
</CustomField>