force-app/main/default/objects/Opportunity/fields/OwnerOppDivision__c.field-meta.xml
<CustomField>
    <fullName>OwnerOppDivision__c</fullName>
    <formula>Owner.Division</formula>
    <label>所有者 ディビジョン</label>
    <type>Text</type>
</CustomField>