force-app/main/default/objects/Opportunity/fields/PartnerCompany__c.field-meta.xml
<CustomField>
    <fullName>PartnerCompany__c</fullName>
    <inlineHelpText>BUによって選択リストが切り替わります</inlineHelpText>
    <label>協業社</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BU__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MPEC</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>名菱電子</fullName>
            </value>
            <value>
                <fullName>日米電子</fullName>
                <isActive>false</isActive>
                <label>日米電子</label>
            </value>
            <value>
                <fullName>西菱電機</fullName>
                <isActive>false</isActive>
                <label>西菱電機</label>
            </value>
            <value>
                <fullName>道販</fullName>
                <isActive>false</isActive>
                <label>道販</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>