force-app/main/default/objects/Opportunity/fields/PersonInSales__c.field-meta.xml
<CustomField>
    <fullName>PersonInSales__c</fullName>
    <description>案件完了時の担当者氏名</description>
    <label>売上時担当者</label>
    <length>100</length>
    <type>Text</type>
</CustomField>