force-app/main/default/objects/Opportunity/fields/PickDivision__c.field-meta.xml
<CustomField>
    <fullName>PickDivision__c</fullName>
    <defaultValue>$User.Division</defaultValue>
    <label>部門</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本社　通シ</fullName>
            </value>
            <value>
                <fullName>本社　通シ・管理</fullName>
            </value>
            <value>
                <fullName>本社　通シ・通シ一</fullName>
            </value>
            <value>
                <fullName>本社　通シ・通シ二</fullName>
            </value>
            <value>
                <fullName>本社　施設</fullName>
            </value>
            <value>
                <fullName>本社　施設・一</fullName>
            </value>
            <value>
                <fullName>本社　施設・二</fullName>
            </value>
            <value>
                <fullName>本社　施設・三</fullName>
            </value>
            <value>
                <fullName>本社　施設・DC</fullName>
            </value>
            <value>
                <fullName>本社　施設・販企</fullName>
            </value>
            <value>
                <fullName>本社　社シ一</fullName>
            </value>
            <value>
                <fullName>本社　社シ一・P推</fullName>
            </value>
            <value>
                <fullName>本社　社シ一・一</fullName>
            </value>
            <value>
                <fullName>本社　社シ一・二</fullName>
            </value>
            <value>
                <fullName>本社　社シ一・三</fullName>
            </value>
            <value>
                <fullName>本社　社シ二</fullName>
            </value>
            <value>
                <fullName>本社　社シ二・企政</fullName>
            </value>
            <value>
                <fullName>本社　社シ二・建防</fullName>
            </value>
            <value>
                <fullName>本社　社シ二・道路</fullName>
            </value>
            <value>
                <fullName>本社　社シ二・S監</fullName>
            </value>
            <value>
                <fullName>本社　官公</fullName>
            </value>
            <value>
                <fullName>本社　官公・一</fullName>
            </value>
            <value>
                <fullName>本社　官公・二</fullName>
            </value>
            <value>
                <fullName>本社　海Ｆシ</fullName>
            </value>
            <value>
                <fullName>本社　海Ｆシ・１</fullName>
            </value>
            <value>
                <fullName>本社　海Ｆシ・２</fullName>
            </value>
            <value>
                <fullName>本社　社環計</fullName>
            </value>
            <value>
                <fullName>本社　社環計・企画</fullName>
            </value>
            <value>
                <fullName>本社　社環計・業務</fullName>
            </value>
            <value>
                <fullName>本社　社環計・品証</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>