force-app/main/default/objects/Opportunity/fields/PlanningGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>PlanningGrossProfit__c</fullName>
    <formula>EstimatedTotalCP__c - EstimatedTotalWC1__c - MarginMultipledByProbability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CP×係数 - WC×係数 - 手数料×係数</inlineHelpText>
    <label>粗利×係数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>