force-app/main/default/objects/Opportunity/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <formula>Region__r.Prefecture__c</formula>
    <label>都道府県名</label>
    <type>Text</type>
</CustomField>