force-app/main/default/objects/Opportunity/fields/Probability1__c.field-meta.xml
<CustomField>
    <fullName>Probability1__c</fullName>
    <defaultValue>1.00</defaultValue>
    <label>係数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>