force-app/main/default/objects/Opportunity/fields/Profitability__c.field-meta.xml
<CustomField>
    <fullName>Profitability__c</fullName>
    <inlineHelpText>場所別保存時に自動で設定されます。TC確保（CP≧TC＋販売手数料）／不採算(TC以下)／特別不採算(WC率95％以上)</inlineHelpText>
    <label>【未使用】採算性</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TC確保</fullName>
            </value>
            <value>
                <fullName>不採算</fullName>
            </value>
            <value>
                <fullName>特別不採算</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>