force-app/main/default/objects/Opportunity/fields/ProjectScope__c.field-meta.xml
<CustomField>
    <fullName>ProjectScope__c</fullName>
    <label>事業対象範囲</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B(EPC)</fullName>
            </value>
            <value>
                <fullName>BM</fullName>
            </value>
            <value>
                <fullName>DB</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
            <value>
                <fullName>DBO</fullName>
            </value>
            <value>
                <fullName>事業運営</fullName>
            </value>
            <value>
                <fullName>未定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>