force-app/main/default/objects/Opportunity/fields/ProjectScopeRemarks__c.field-meta.xml
<CustomField>
    <fullName>ProjectScopeRemarks__c</fullName>
    <label>事業対象範囲 備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>