force-app/main/default/objects/Opportunity/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>施設BUは入力必須です。</inlineHelpText>
    <label>物件名</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>