force-app/main/default/objects/Opportunity/fields/ProposedTechnique__c.field-meta.xml
<CustomField>
    <fullName>ProposedTechnique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>当社技術提案</label>
    <type>Checkbox</type>
</CustomField>