force-app/main/default/objects/Opportunity/fields/ProposedTechniqueForM__c.field-meta.xml
<CustomField>
    <fullName>ProposedTechniqueForM__c</fullName>
    <label>技術提案</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>当社既設図面提供</fullName>
            </value>
            <value>
                <fullName>機器提案</fullName>
            </value>
            <value>
                <fullName>工事提案</fullName>
            </value>
            <value>
                <fullName>他社既設図面収集</fullName>
            </value>
            <value>
                <fullName>現地調査</fullName>
            </value>
            <value>
                <fullName>技術提案なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>