force-app/main/default/objects/Opportunity/fields/ProposedTechniqueRemarks__c.field-meta.xml
<CustomField>
    <fullName>ProposedTechniqueRemarks__c</fullName>
    <label>技術提案 備考</label>
    <type>TextArea</type>
</CustomField>