force-app/main/default/objects/Opportunity/fields/PublicPrivatePartnership__c.field-meta.xml
<CustomField>
    <fullName>PublicPrivatePartnership__c</fullName>
    <defaultValue>(&quot;官民連携なし&quot;)</defaultValue>
    <label>官民連携</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPP</fullName>
            </value>
            <value>
                <fullName>W-PPP（レベル3.5）</fullName>
            </value>
            <value>
                <fullName>コンセッション</fullName>
            </value>
            <value>
                <fullName>PFI</fullName>
            </value>
            <value>
                <fullName>官民連携なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>