force-app/main/default/objects/Opportunity/fields/PumpStation__c.field-meta.xml
<CustomField>
    <fullName>PumpStation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>水環境BUは入力必須です。</inlineHelpText>
    <label>機場名</label>
    <referenceTo>PumpStation__c</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>OppsPumpStation</relationshipName>
    <type>Lookup</type>
</CustomField>