force-app/main/default/objects/Opportunity/fields/RecordTypeIDOfQuote__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeIDOfQuote__c</fullName>
    <label>見積レコードタイプID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>