force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>地域が不明・未定の場合は「不明」項目を登録下さい。</inlineHelpText>
    <label>地域・住所</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>Opps01</relationshipName>
    <type>Lookup</type>
</CustomField>