force-app/main/default/objects/Opportunity/fields/RegionCode__c.field-meta.xml
<CustomField>
    <fullName>RegionCode__c</fullName>
    <formula>Region__r.RegionCode__c</formula>
    <label>地域コード</label>
    <type>Text</type>
</CustomField>