force-app/main/default/objects/Opportunity/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>選定結果</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>◎</fullName>
            </value>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>