force-app/main/default/objects/Opportunity/fields/Result_AdditionalCost__c.field-meta.xml
<CustomField>
    <fullName>Result_AdditionalCost__c</fullName>
    <label>４．追加原価</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>