force-app/main/default/objects/Opportunity/fields/Result_GP__c.field-meta.xml
<CustomField>
    <fullName>Result_GP__c</fullName>
    <formula>Result_TotalCP__c - Result_FinalWC__c - Result_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>４．最終粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>