force-app/main/default/objects/Opportunity/fields/Result_Margin__c.field-meta.xml
<CustomField>
    <fullName>Result_Margin__c</fullName>
    <label>４．売上実績手数料</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>