force-app/main/default/objects/Opportunity/fields/Result_SalesDate__c.field-meta.xml
<CustomField>
    <fullName>Result_SalesDate__c</fullName>
    <label>４．売上年月日</label>
    <type>Date</type>
</CustomField>