force-app/main/default/objects/Opportunity/fields/Result_SalesGP__c.field-meta.xml
<CustomField>
    <fullName>Result_SalesGP__c</fullName>
    <description>売上実績CP-（売上実績WC+売上実績手数料）</description>
    <formula>Result_TotalCP__c - Result_TotalWC__c - Result_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>４．売上実績粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>