force-app/main/default/objects/Opportunity/fields/Result_TC__c.field-meta.xml
<CustomField>
    <fullName>Result_TC__c</fullName>
    <label>４．売上実績TC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>