force-app/main/default/objects/Opportunity/fields/Result_TCRate__c.field-meta.xml
<CustomField>
    <fullName>Result_TCRate__c</fullName>
    <formula>Result_TC__c / Result_TotalCP__c</formula>
    <label>４．売上実績TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>