force-app/main/default/objects/Opportunity/fields/Result_WCPercent__c.field-meta.xml
<CustomField>
    <fullName>Result_WCPercent__c</fullName>
    <formula>Result_TotalWC__c / Result_TotalCP__c</formula>
    <label>４．売上実績WC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>