force-app/main/default/objects/Opportunity/fields/SaishinCP_oku__c.field-meta.xml
<CustomField>
    <fullName>SaishinCP_oku__c</fullName>
    <description>CP(実績&gt;最終予想最新&gt;最終予想受注時&gt;商談）の、億円表示</description>
    <formula>ROUND(Current_TotalCP2__c*0.00000001,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>最新CP（億）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>