force-app/main/default/objects/Opportunity/fields/SalesTax__c.field-meta.xml
<CustomField>
    <fullName>SalesTax__c</fullName>
    <label>消費税率</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>10%</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8%</label>
            </value>
            <value>
                <fullName>免税</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>