force-app/main/default/objects/Opportunity/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商流2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>案件 (サブコン)</relationshipLabel>
    <relationshipName>SCContacts</relationshipName>
    <type>Lookup</type>
</CustomField>