force-app/main/default/objects/Opportunity/fields/SC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>SC_Remarks__c</fullName>
    <label>商流2 備考</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>