force-app/main/default/objects/Opportunity/fields/ScheduledCollectionAmount01__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCollectionAmount01__c</fullName>
    <label>回収予定金額①×係数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>