force-app/main/default/objects/Opportunity/fields/ScheduledCollectionAmount02__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCollectionAmount02__c</fullName>
    <label>回収予定金額②×係数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>