force-app/main/default/objects/Opportunity/fields/ScheduledCollectionAmount03__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCollectionAmount03__c</fullName>
    <label>回収予定金額③×係数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>