force-app/main/default/objects/Opportunity/fields/ScheduledCollectionDate2__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCollectionDate2__c</fullName>
    <label>回収予定日②</label>
    <type>Date</type>
</CustomField>