force-app/main/default/objects/Opportunity/fields/ScheduledCollectionDate3__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCollectionDate3__c</fullName>
    <label>回収予定日③</label>
    <type>Date</type>
</CustomField>