force-app/main/default/objects/Opportunity/fields/ScheduledCollectionDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCollectionDate__c</fullName>
    <inlineHelpText>空欄で保存した場合は、売上予定日の翌々月末日が自動セットされます</inlineHelpText>
    <label>回収予定日①</label>
    <type>Date</type>
</CustomField>