force-app/main/default/objects/Opportunity/fields/ScheduledSalesDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledSalesDate__c</fullName>
    <label>売上予定日</label>
    <type>Date</type>
</CustomField>