force-app/main/default/objects/Opportunity/fields/ScheduledSalesDate_yyyymm__c.field-meta.xml
<CustomField>
    <fullName>ScheduledSalesDate_yyyymm__c</fullName>
    <formula>IF( ISNULL(ScheduledSalesDate__c), &quot;&quot;, TEXT( YEAR(ScheduledSalesDate__c) )  +   LPAD(TEXT(MONTH(ScheduledSalesDate__c)), 2 , &quot;0&quot;))</formula>
    <label>売上予定年月(yyyymm)</label>
    <type>Text</type>
</CustomField>