force-app/main/default/objects/Opportunity/fields/ScheduledSalesDate_yyyymmdd__c.field-meta.xml
<CustomField>
    <fullName>ScheduledSalesDate_yyyymmdd__c</fullName>
    <formula>IF( ISNULL(ScheduledSalesDate__c), &quot;&quot;, TEXT( YEAR(ScheduledSalesDate__c) )  +   LPAD(TEXT(MONTH(ScheduledSalesDate__c)), 2 , &quot;0&quot;)   +  LPAD(TEXT(DAY(ScheduledSalesDate__c)), 2 , &quot;0&quot;))</formula>
    <label>売上予定日(yyyymmdd)</label>
    <type>Text</type>
</CustomField>