force-app/main/default/objects/Opportunity/fields/SellingNumber__c.field-meta.xml
<CustomField>
    <fullName>SellingNumber__c</fullName>
    <label>その他売報番号</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>