force-app/main/default/objects/Opportunity/fields/SFDC_Push_Counter__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Push_Counter__c</fullName>
    <description>設定していた完了予定日を未来日付に変更するたびに数字が追加されます。
（同月の変更は追加されません。翌月以降にすると追加されます。）</description>
    <label>Push Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>