force-app/main/default/objects/Opportunity/fields/site2__c.field-meta.xml
<CustomField>
    <fullName>site2__c</fullName>
    <label>サイト（ヵ月）②</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>