force-app/main/default/objects/Opportunity/fields/site3__c.field-meta.xml
<CustomField>
    <fullName>site3__c</fullName>
    <label>サイト（ヵ月）③</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>