force-app/main/default/objects/Opportunity/fields/SR_Number_Main__c.field-meta.xml
<CustomField>
    <fullName>SR_Number_Main__c</fullName>
    <description>代表となる売報番号を表示する（案件「その他売報番号」の先頭の番号）。</description>
    <label>売報番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>