force-app/main/default/objects/Opportunity/fields/SR_WC__c.field-meta.xml
<CustomField>
    <fullName>SR_WC__c</fullName>
    <inlineHelpText>経営情報から連携されてくる金額なので、入力不要です。</inlineHelpText>
    <label>付替WC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>