force-app/main/default/objects/Opportunity/fields/SRCP_saishin_oku__c.field-meta.xml
<CustomField>
    <fullName>SRCP_saishin_oku__c</fullName>
    <formula>ROUND(Latest_TotalCP__c*0.00000001,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>３．SRCP（最新）(億)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>