force-app/main/default/objects/Opportunity/fields/StandardPrice__c.field-meta.xml
<CustomField>
    <fullName>StandardPrice__c</fullName>
    <label>基準価格設定有無</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>調査基準価格あり</fullName>
            </value>
            <value>
                <fullName>特別重点調査価格あり</fullName>
            </value>
            <value>
                <fullName>最低制限価格(失格基準価格)あり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>