force-app/main/default/objects/Opportunity/fields/SupplySite__c.field-meta.xml
<CustomField>
    <fullName>SupplySite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>官需BUは入力必須です。</inlineHelpText>
    <label>納入サイト</label>
    <referenceTo>SupplySite__c</referenceTo>
    <relationshipLabel>案件</relationshipLabel>
    <relationshipName>SupplySiteOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>