force-app/main/default/objects/Opportunity/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <label>１．商談TC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>