force-app/main/default/objects/Opportunity/fields/TCRate__c.field-meta.xml
<CustomField>
    <fullName>TCRate__c</fullName>
    <formula>TC__c /   TotalCP__c</formula>
    <label>１．商談TC率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>