force-app/main/default/objects/Opportunity/fields/TotalCPForReporting__c.field-meta.xml
<CustomField>
    <fullName>TotalCPForReporting__c</fullName>
    <formula>EstimatedTotalCP__c  == (EstimatedIssuedCP_01__c +  EstimatedIssuedCP_02__c +  EstimatedIssuedCP_03__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>発行CP一致フラグ</label>
    <type>Checkbox</type>
</CustomField>