force-app/main/default/objects/Opportunity/fields/TotalScheduledCollectionAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalScheduledCollectionAmount__c</fullName>
    <formula>ScheduledCollectionAmount__c == (ScheduledCollectionAmount01__c +  ScheduledCollectionAmount02__c  +  ScheduledCollectionAmount03__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>回収予定金額一致フラグ</label>
    <type>Checkbox</type>
</CustomField>