force-app/main/default/objects/Opportunity/fields/TotalWC__c.field-meta.xml
<CustomField>
    <fullName>TotalWC__c</fullName>
    <inlineHelpText>場所別を作成すると、場所別数値の集計値が自動挿入されます。</inlineHelpText>
    <label>１．商談WC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>