force-app/main/default/objects/Opportunity/fields/TotalWCForReporting__c.field-meta.xml
<CustomField>
    <fullName>TotalWCForReporting__c</fullName>
    <formula>EstimatedTotalWC1__c  == (EstimatedIssuedWC_01__c +  EstimatedIssuedWC_02__c +  EstimatedIssuedWC_03__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>発行WC一致フラグ</label>
    <type>Checkbox</type>
</CustomField>