force-app/main/default/objects/Opportunity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>新築／既築</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新築</fullName>
            </value>
            <value>
                <fullName>既築</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>